--- a/site_ViveBio/src/views/error.ejs
+++ b/site_ViveBio/src/views/error.ejs
@@ -15,8 +15,8 @@
         <section class="page_404">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-12 ">
-                        <div class="col-sm-10 col-sm-offset-1  text-center">
+                    <div class="row-sub">
+                        <div class="text-center">
                             <div class="four_zero_four_bg">
 
                                 <h1 class="text-center ">404</h1>
@@ -24,10 +24,10 @@
                             </div>
                             <div class="contant_box_404">
                                 <h3>
-                                    Look like you're lost
+                                    We're lost!
                                 </h3>
 
-                                <p>the page you are looking for not avaible!</p>
+                                <p>The page you are looking for not avaible!</p>
 
                                 <a href="/" class="link_404">Go to Home</a>
 
@@ -41,12 +41,11 @@
     </main>
 </body>
 
-<h1>
+<h4>
     <%= message %>
-</h1>
-<h2>
+</h4>
+<h5>
     <%= error.status %>
-</h2>
-<pre><%= error.stack %></pre>
+</h5>
+<h6><%= error.stack %></h6>
 </html>
-
