--- a/site_ViveBio/src/views/products/productAll.ejs
+++ b/site_ViveBio/src/views/products/productAll.ejs
@@ -30,18 +30,26 @@
                                             <h4>
                                                 <%= category.name %>
                                             </h4>
+                                            <h6 class="rating">⭐⭐⭐⭐</h6>
                                             <span>-<%= property %> -</span>
-                                            <h3>$<%= price %> .-</h3>
-                                            <span class="rating">⭐⭐⭐⭐</span>
+                                            <p>
+                                                $ <% if (discount) { %>
+                                                    <%= price - (price * discount / 100) %>
+                                                        <% }else{ %>
+                                                            <%= product.price %>
+                                                                <% } %>
+                                            </p>
+
                                         </div>
                                         <div class="card-c-iconos">
                                             <div class="iconos-white">
                                                 <a href="/products/Card/<%= id %>"><i class="fa-solid fa-eye"></i></a>
                                                 <a href="/products/Edit/<%= id %>"><i class="fa-solid fa-pen"></i></a>
+                                                <a href="/productCarrito.html" class="add-cart">Quiero! 🛒</a>
                                                 <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
                                                 <a href="#"><i class="fa-solid fa-star"></i></a>
                                             </div>
-                                            <a href="/productCarrito.html" class="add-cart">Quiero! 🛒</a>
+
                                         </div>
                                     </div>
                                 </div>
@@ -71,25 +79,33 @@
                                             <h4>
                                                 <%= category.name %>
                                             </h4>
+                                            <h6 class="rating">⭐⭐⭐⭐</h6>
                                             <span>-<%= property %> -</span>
-                                            <h3>$<%= price %> .-</h3>
-                                            <span class="rating">⭐⭐⭐⭐</span>
+                                            <p>
+                                                $ <% if (discount) { %>
+                                                    <%= price - (price * discount / 100) %>
+                                                        <% }else{ %>
+                                                            <%= product.price %>
+                                                                <% } %>
+                                            </p>
+
                                         </div>
                                         <div class="card-c-iconos">
                                             <div class="iconos-white">
                                                 <a href="/products/Card/<%= id %>"><i class="fa-solid fa-eye"></i></a>
                                                 <a href="/products/Edit/<%= id %>"><i class="fa-solid fa-pen"></i></a>
+                                                <a href="/productCarrito.html" class="add-cart">Quiero! 🛒</a>
                                                 <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
                                                 <a href="#"><i class="fa-solid fa-star"></i></a>
                                             </div>
-                                            <a href="/productCarrito.html" class="add-cart">Quiero! 🛒</a>
+
                                         </div>
                                     </div>
                                 </div>
                             </article>
                             <% }) %>
                     </section>
-                    <h2 class="titulares" id="BioSpa" >BioSpa</h2>
+                    <h2 class="titulares" id="BioSpa">BioSpa</h2>
                     <section class="row">
                         <% bioSpa.forEach(({id,name,price,discount,property,image})=> { %>
                             <article>
@@ -112,18 +128,26 @@
                                             <h4>
                                                 <%= category.name %>
                                             </h4>
+                                            <h6 class="rating">⭐⭐⭐⭐</h6>
                                             <span>-<%= property %> -</span>
-                                            <h3>$<%= price %> .-</h3>
-                                            <span class="rating">⭐⭐⭐⭐</span>
+                                            <p>
+                                                $ <% if (discount) { %>
+                                                    <%= price - (price * discount / 100) %>
+                                                        <% }else{ %>
+                                                            <%= product.price %>
+                                                                <% } %>
+                                            </p>
+
                                         </div>
                                         <div class="card-c-iconos">
                                             <div class="iconos-white">
                                                 <a href="/products/Card/<%= id %>"><i class="fa-solid fa-eye"></i></a>
                                                 <a href="/products/Edit/<%= id %>"><i class="fa-solid fa-pen"></i></a>
+                                                <a href="/productCarrito.html" class="add-cart">Quiero! 🛒</a>
                                                 <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
                                                 <a href="#"><i class="fa-solid fa-star"></i></a>
                                             </div>
-                                            <a href="/productCarrito.html" class="add-cart">Quiero! 🛒</a>
+
                                         </div>
                                     </div>
                                 </div>
