--- a/site_ViveBio/public/css/header.css
+++ b/site_ViveBio/public/css/header.css
@@ -12,7 +12,7 @@
 Header mobile
 **********************************************/
 .header_mobile-container{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     overflow: hidden;
     position: absolute;
