--- a/site_ViveBio/public/css/register.css
+++ b/site_ViveBio/public/css/register.css
@@ -1,24 +1,23 @@
-.register main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
 
 .header_register {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: none;
 }
 
 .header_register img {
     width: 150px;
 }
 
+.register_alert{
+    font-size: 10px;
+    background-color: rgb(224, 129, 129);
+    width: 100%;
+    color: white;
+}
+
 .register_container {
     width: 270px;
     padding: 20px;
-    margin: 10px 0 10px;
+    margin: 70px auto;
     box-shadow: 5px 5px 10px rgb(161, 206, 152);
     border-radius: 5px;
     background-color: rgba(255, 255, 255, .15);
@@ -26,16 +25,16 @@
     border: 1px solid var(--verdeFuerte);
 }
 
-.box_1 {
+.container_register-box1 {
     font-size: 12px;
 }
 
-.box_2 {
-    font-size: 10px;
+.container_register-box2 {
+    font-size: 12px;
     text-align: end;
 }
 
-.box_introduccion {
+.register_box-introduccion {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -83,17 +82,12 @@
 
 }
 
-.register_form-input:hover,
-.register_form-input:focus {
-    box-shadow: 0 0 5px var(--verdeOscuro), 0 0 10px var(--verdeOscuro), 0 0 15px var(--verdeOscuro);
-}
+
 
 .register_button {
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    margin-top: 10px;
 }
 
 .register_form-box:first-child {
@@ -103,41 +97,55 @@
 .register_button button {
     background-color: var(--verdeOscuro);
     color: black;
-    border-radius: 12px;
-    padding: 5px 10px;
+    border-radius: 8px;
+    padding: 8px;
     transition: all 0.8s;
+    font-size: 15px;
+    margin-top: 10px;
 }
 
 @media (min-width: 425px) {
     .register_container {
         width: 450px;
+        
+    }
+
+    .header_register_mobile {
+        display: none;
+    }
+
+    .header_register {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 20%;
     }
 }
 
 @media (min-width: 768px) {
-    .register_container{
+    .register_container {
         width: 700px;
+        height: calc(100vh-130px);
     }
-    .sub-container{
+
+    .register_sub-container {
         display: flex;
     }
-    .sub-container1{
+
+    .register_sub-container1 {
         padding: 10px;
         width: 50%;
     }
-    .sub-container2{
+
+    .register_sub-container2 {
         padding: 10px;
         width: 50%;
     }
-    
+
     .register_button button:hover {
         background-color: var(--verdeFuerte);
     }
 
-    .header_register img {
-        width: 250px;
-        margin-bottom: 10px;
-    }
 
     .box_1 {
         font-size: 15px;
@@ -147,7 +155,7 @@
         font-size: 12px;
     }
 
-    .container {
+    .register .container {
         width: 350px;
         height: 500px;
     }
@@ -162,5 +170,10 @@
 
     .register_form-box:last-child {
         margin-bottom: 0;
+    }
+
+    .register_form-input:hover,
+    .register_form-input:focus {
+        box-shadow: 0 0 5px var(--verdeOscuro), 0 0 10px var(--verdeOscuro), 0 0 15px var(--verdeOscuro);
     }
 }
