--- a/site_ViveBio/src/views/users/login.ejs
+++ b/site_ViveBio/src/views/users/login.ejs
@@ -1,64 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<%- include('../partials/head', {
-    title : "Login"
-}) %> 
+<%- include('../partials/head', { title : "Login" }) %>
 
-<body class="login">
-    <header class="header_login">
-        <a href="/"><img src="/images/logo.png" alt=""></a>
-    </header>
-    <main>
-        <section>
-            <article class="login_video">
-                <iframe width="300" height="200" src="https://www.youtube.com/embed/k5tsZzJsCuU"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </article>
-        </section>
-        <section class="login_container">
-            <div class="box_introduccion">
-                <div class="login_box_1">
-                    <p style="text-shadow: 1px 1px 2px black;">Binvenido a </p>
-                    <p style="color: var(--verdeFuerte);text-shadow: 1px 1px 2px black;">ViveBio</p>
+    <body class="login">
+        <div class="header_login">
+            <a href="/"><img src="/images/logo.png" alt=""></a>
+        </div>
+        <div class="header_login_mobile">
+            <%- include('../partials/header') %>
+        </div>
+        <main>
+            <div class="login_general_container">
+                <div class="login_container_video">
+                    <section class="login_video">
+                        <iframe width="300" height="200" src="https://www.youtube.com/embed/k5tsZzJsCuU"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </section>
                 </div>
-                <div class="login_box_2">
-                    <p style="text-shadow: 1px 1px 2px black;">No tenés cuenta?</p>
-                    <a href="/users/register"
-                        style="color: var(--verdeFuerte);text-shadow: 1px 1px 1px black;">Registrate!</a>
+                <div class="login_form-container">
+                    <section class="login_container">
+                        <div class="box_introduccion">
+                            <div class="login_box_1">
+                                <p style="text-shadow: 1px 1px 2px black;">Binvenido a </p>
+                                <p style="color: var(--verdeFuerte);text-shadow: 1px 1px 2px black;">ViveBio</p>
+                            </div>
+                            <div class="login_box_2">
+                                <p style="text-shadow: 1px 1px 2px black;">No tenés cuenta?</p>
+                                <a href="/users/register"
+                                    style="color: var(--verdeFuerte);text-shadow: 1px 1px 1px black;">Registrate!</a>
+                            </div>
+                        </div>
+                        <h1>Login</h1>
+                        <div class="login_box-gf">
+                            <div class="login_google">
+                                <button type="submit"><i class="fab fa-google-plus"></i></button>
+                            </div>
+                            <div class="login_facebook">
+                                <button type="submit"><i class="fab fa-facebook"></i></button>
+                            </div>
+                        </div>
+                        <form action="">
+                            <article>
+                                <div class="login_form-box">
+                                    <label for="user">Usuario</label>
+                                    <input class="login_form-input" type="user" id="user" name="user"
+                                        placeholder="Ingresa usuario">
+                                </div>
+                                <div class="login_form-box">
+                                    <label for="password">Contraseña</label>
+                                    <input class="login_form-input" type="password" id="password" name="password"
+                                        placeholder="Ingresa tu contraseña" required>
+                                </div>
+                            </article>
+                            <div class="login_remember-box">
+                                <input  type="checkbox" name="remember" style="margin-right: 10px;">
+                                <label for="remember" name="remember">Recordar usuario</label>
+                            </div>
+
+                            <div class="login_button">
+                                <button type="submit">Enviar</button>
+                            </div>
+
+                        </form>
+                    </section>
                 </div>
             </div>
-            <h1>Login</h1>
-            <div class="login_box-gf">
-                <div class="login_google">
-                    <button type="submit"><i class="fab fa-google-plus"></i></button>
-                </div>
-                <div class="login_facebook">
-                    <button type="submit"><i class="fab fa-facebook"></i></button>
-                </div>
-            </div>
-            <form action="">
-                <article>
-                    <div class="login_form-box">
-                        <label for="user">Usuario</label>
-                        <input class="login_form-input" type="user" id="user" name="user" placeholder="Ingresa usuario">
-                    </div>
-                    <div class="login_form-box">
-                        <label for="password">Contraseña</label>
-                        <input class="login_form-input" type="password" id="password" name="password"
-                            placeholder="Ingresa tu contraseña">
-                    </div>
-                </article>
-                <div class="login_center">
-                    <div class="login_button">
-                        <button type="submit">Enviar</button>
-                    </div>
-                </div>
-            </form>
-        </section>
-    </main>
-</body>
+        </main>
+        <script src="/javascript/menuMobile.js"></script>
+    </body>
 
 </html>
