--- a/site_ViveBio/public/css/register.css
+++ b/site_ViveBio/public/css/register.css
@@ -68,11 +68,6 @@
     margin-left: 10px;
 }
 
-.register_center {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
 
 .register_terminos {
     display: flex;
@@ -82,7 +77,9 @@
 
 }
 
-
+.register_errors-box{
+    text-align: center;
+}
 
 .register_button {
     display: flex;
