--- a/public/css/home.css
+++ b/public/css/home.css
@@ -9,9 +9,6 @@
     background-repeat: no-repeat;
     background-position: center;
 }
-.home .carrusel__home .banner{
-    width: 150px;
-}
 
 
 /************************************************
@@ -75,6 +72,158 @@ ANIMACIÓN DE INTRO
     opacity: 1;
     transition: 0.5s;
 }
+
+
+
+/**********************************************
+Carrusel
+**********************************************/
+.slider {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    padding: 0px;
+    position: relative;
+}
+
+.slides input {
+    display: none;
+}
+
+.slides {
+    width: 500%;
+    height: 100vh;
+    display: flex;
+}
+
+.slides p {
+    position: absolute;
+    top: 35%;
+    background-color: rgba(0, 0, 0, 0.25);
+    width: 100%;
+    text-align: center;
+    padding: 100px 0 100px;
+}
+
+
+.img_1 {
+    width: 100%;
+    height: 100%;
+    background-image: url(/images/ViveBio.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.img_2 {
+    width: 100%;
+    height: 100%;
+    background-image: url(/images/ViveBio-3.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.img_3 {
+    width: 100%;
+    height: 100%;
+    background-image: url(/images/carousel_img_3.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.img_4 {
+    width: 100%;
+    height: 100%;
+    background-image: url(/images/carousel_img_1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+
+
+.slide {
+    width: 20%;
+    transition: 2s;
+}
+
+.navigation-manual {
+    position: absolute;
+    width: 100%;
+    top: 95%;
+    display: flex;
+    justify-content: center;
+}
+
+.manual-btn {
+    border: 2px solid var(--verdeOscuro);
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 2s;
+}
+
+.manual-btn:not(:last-child) {
+    margin-right: 40px;
+}
+
+
+#radio1:checked~.first {
+    margin-left: 0;
+}
+
+#radio2:checked~.first {
+    margin-left: -20%;
+}
+
+#radio3:checked~.first {
+    margin-left: -40%;
+}
+
+#radio4:checked~.first {
+    margin-left: -60%;
+}
+
+
+.navigation-auto {
+    position: absolute;
+    display: flex;
+    width: 100%;
+    top: 95%;
+    justify-content: center;
+}
+
+.navigation-auto div {
+    border: 2px solid var(--verdeOscuro);
+    padding: 5px;
+    border-radius: 10px;
+    transition: 1s;
+}
+
+.navigation-auto div:not(:last-child) {
+    margin-right: 40px;
+}
+
+#radio1:checked~.navigation-auto .auto-btn1 {
+    background: var(--verdeOscuro);
+}
+
+#radio2:checked~.navigation-auto .auto-btn2 {
+    background: var(--verdeOscuro);
+}
+
+#radio3:checked~.navigation-auto .auto-btn3 {
+    background: var(--verdeOscuro);
+}
+
+#radio4:checked~.navigation-auto .auto-btn4 {
+    background: var(--verdeOscuro);
+}
+
+
+
 /*************************************************
 primera parte del main
 *************************************************/
@@ -113,9 +262,9 @@ primera parte del main
 .home .sect1 .art__home .nombreart__home {
     text-align: center;
     background-color: #7FA794;
-    border-radius: 19px;
+    border-radius: 12px;
     width: 85%;
-    height: 30px;
+    height: 50px;
     margin: 10px auto;
     display: flex;
     /*coloco como un contenedor flex*/
@@ -184,18 +333,21 @@ primera parte del main
     justify-content: flex-end;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
-.precio{
+
+.precio {
     display: flex;
     margin-top: 10px;
     flex-direction: row;
     justify-content: center;
 }
 
-.precio h4{    
-    text-decoration: line-through;/*tachamos el precio*/
+.precio h4 {
+    text-decoration: line-through;
+    /*tachamos el precio*/
     color: var(--azulMarino);
 }
-.precio p{
+
+.precio p {
     font-size: 30px;
     color: black;
     margin-left: 10px;
@@ -229,57 +381,55 @@ segunda parte del main
 }
 
 .home .sect2 .categorias__home {
+    overflow: hidden;
     width: 100%;
     margin: 0 auto;
     height: 300px;
     margin-bottom: 50px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-
 }
+
+
+
 
 #cate {
     width: 100%;
     height: 100%;
     background-position: center center;
-    position: relative;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 
 
-.home .sect2 .categorias__home .corporal__home {
+
+.home .sect2 .categorias__home .BioCorporal__home {
     /* background-image: url(/images/shampoo-argán.jpg); */
-    background-image: linear-gradient(
-        rgba(0, 0, 0, 0.5),
-        rgba(0, 0, 0, 0.5)
-    )
-    ,url(/images/producto1.jpeg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5),
+            rgba(0, 0, 0, 0.5)), url(/images/producto1.jpeg);
     background-size: cover;
+    transition: all 0.5s;
 }
 
 
 
-.home .sect2 .categorias__home .capilar__home {
+.home .sect2 .categorias__home .BioCapilar__home {
     /* background-image: url(/images/acondicionador-natural-de-coco-3.jpg); */
-    background-image: linear-gradient(
-        0deg,
-        rgba(0, 0, 0, 0.5),
-        rgba(0, 0, 0, 0.5)
-    )
-    ,url(/images/producto2.jpeg);
+    background-image: linear-gradient(0deg,
+            rgba(0, 0, 0, 0.5),
+            rgba(0, 0, 0, 0.5)), url(/images/producto2.jpeg);
     background-size: cover;
+    transition: all 0.5s;
 }
 
-.home .sect2 .categorias__home .spa__home {
+.home .sect2 .categorias__home .BioSpa__home {
     /* background-image: url(/images/2en1almendras.jpg); */
-    background-image: linear-gradient(
-        0deg,
-        rgba(0, 0, 0, 0.5),
-        rgba(0, 0, 0, 0.5)
-    )
-    ,url(/images/producto3.jpeg);
+    background-image: linear-gradient(0deg,
+            rgba(0, 0, 0, 0.5),
+            rgba(0, 0, 0, 0.5)), url(/images/producto3.jpeg);
     background-size: cover;
+    transition: all 0.5s;
+
 }
 
 
@@ -293,15 +443,31 @@ segunda parte del main
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
-.barra__cate__home a{
+.barra__cate__home p {
     font-size: 24px;
 }
 
 
 
 @media(min-width:426px) {
+
+    /* START CARROUSEL TABLET*/
+    .slider {
+        margin: 50px 0 50px;
+        height: 300px;
+    }
+
+    .slides p {
+        top: 23%;
+        padding: 70px;
+    }
+    /*END CAROUSEL TABLET*/
+    .mobile_header {
+        display: none;
+    }
 
     .letter {
         font-size: 2rem;
@@ -341,7 +507,7 @@ segunda parte del main
 
     .home main .subtitulo__home h1 {
         padding: 5px;
-        
+
     }
 
     .home main .nombre-categorias__home h1 {
@@ -387,6 +553,31 @@ segunda parte del main
     /*Seccion 2 del home*/
     .home .sect2 {
         justify-content: space-evenly;
+    }
+
+    .home .sect2 .categorias__home {
+        width: 275px;
+        height: 275px;
+    }
+
+    .home .sect2 .categorias__home .BioCapilar__home,
+    .home .sect2 .categorias__home .BioCorporal__home,
+    .home .sect2 .categorias__home .BioSpa__home{
+        filter: blur(3px);
+
+    }
+
+    .home .sect2 .categorias__home .barra__cate__home {
+        transition: all 0.5s;
+    }
+
+
+    .home .sect2 .categorias__home:hover .BioCorporal__home,
+    .home .sect2 .categorias__home:hover .barra__cate__home,
+    .home .sect2 .categorias__home:hover .BioCapilar__home,
+    .home .sect2 .categorias__home:hover .BioSpa__home{
+        transform: scale(1.1);
+        filter: blur(0px);
     }
 
 
