--- a/public/css/header.css
+++ b/public/css/header.css
@@ -4,33 +4,115 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    padding-bottom: 10px;
+    overflow: hidden;
+/*     padding-bottom: 10px; */
+}
+
+/*******************************************
+Header mobile
+**********************************************/
+.header_mobile-container{
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    position: absolute;
 }
 
 
-.header__logo img {
-    width: 200px;
+.mobile_header {
+    width: 100vw;
+    height: 70px;
+    align-items: center;
+    display: flex;
+    position: fixed;
+    z-index: 5;
 }
 
+.mobile_logo {
+    width: 25%;
+    text-align: start;
+    padding: 5px 0 0 5px;
+    font-size: 20px;
+}
 
-header .header__burger {
-    display: block;
-    color: rgb(0, 134, 34);
-    background-color: var(--verdeAmarillento);
-    font-size: 1.5rem;
-    padding: 8px;
-    margin: 10px auto;
-    width: 40px;
-    height: 40px;
-    border-radius: 8px;
+.mobile_logo img {
+    width: 90%;
+}
+
+.nav_mobile_menu {
+    width: 75%;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 10px;
+    font-size: 35px;
+    color: var(--verdeOscuro);
+    text-shadow: 1px 1px 2px black;
+}
+
+.options_mobile{
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    width: 60vw;
+    height: 100vh;
+    z-index: 2;
+    right: 0;
+    background-color: var(--verdeOscuro);
     text-align: center;
-    border: 1px solid black;
+    margin-right: -60vw;
+    transition: 1s;
 }
 
-.header .menu {
-    width: 60px;
-    height: 50px;
-    margin-top: 10px;
+.options_mobile ul li{
+    border-top: 1px solid rgb(94, 94, 94);
+    padding: 20px 0 20px;
+}
+
+.options_mobile ul li:last-child{
+    border-bottom: 1px solid rgb(94, 94, 94);
+}
+.options_mobile ul li:first-child{
+    margin-top: 50px;
+}
+
+.shadow_mobile{
+    width: 40vw;
+    height: 100%;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.5);
+    left: 0;
+    z-index: 2;
+    margin-left: -40vw;
+    transition: 1s;
+}
+
+.mostrar{
+    margin-right: 0;
+    position: fixed;
+}
+
+.mostrar2{
+    margin-left: 0;
+    position: fixed;
+}
+
+.fix_nav{
+    position: fixed;
+    z-index: 5;
+}
+
+.usuario_mobile{
+    text-align: center;
+    padding: 20px 0 20px;
+    font-size: 20px;
+    margin-top: 60px;
+}
+
+
+/*end header mobile*/
+
+.header__logo{
+    display:none;
 }
 
 .header__busqueda {
@@ -58,6 +140,13 @@ header .header__burger {
 }
 
 @media(min-width: 426px) {
+    .options_mobile{
+        display: none;
+    }
+
+    .header_mobile-container{
+        display: none;
+    }
 
     .header {
         flex-direction: column;
@@ -91,7 +180,6 @@ header .header__burger {
         display: flex;
         width: 55%;
         align-items: center;
-
     }
 
     .header__busqueda .barra {
@@ -99,6 +187,7 @@ header .header__burger {
         height: 35px;
         border-radius: 10px;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+        border: 1px solid #7FA794;
     }
 
     .header .header__burger {
@@ -106,9 +195,20 @@ header .header__burger {
     }
 
     .header__busqueda .barra__lupa {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+        border: 1px solid lightblue;
+        background-color: #7FA794;
+        color: var(--verdeClaro);
+        text-shadow: 0 0 1px black;
+        font-size: 20px;
         margin-left: 5px;
-        width: 37px;
-        height: 36px;
+        width: 45px;
+        height: 45px;
+        cursor: pointer;
     }
 
     .header__user {
