--- a/public/css/productAll.css
+++ b/public/css/productAll.css
@@ -1,9 +1,21 @@
-/*MOBILE*/
+
+/* PRODUCTOS RELACIONADOS */
+.productAll .titulares {
+    text-align: center;
+    color: white;
+    background-color: var(--verdeOscuro);
+    margin: 30px 0;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 32px;
+}
+
 .productAll .row {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    padding: 30px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -63,8 +75,9 @@
     border-bottom-right-radius: 10px;
     background-color: var(--green-background-cards);
     height: 170px;
-    padding-left: 10px;
     padding-top: 5px;
+    text-align: center;
+    line-height: 1.5;
 }
 
 .productAll .card {
@@ -78,9 +91,17 @@
 
 /*NOMBRE PRODUCTO*/
 .productAll .estilo-c .info-container h2 {
-    font-size: 24px;
+    font-size: 18px;
     text-shadow: none;
     color: var(--azulSuave);
+}
+
+/*PRECIO PRODUCTO */
+.productAll .estilo-c .info-container p {
+    font-size: 24px;
+    margin: 5px 0px;
+    background-color: var(--aquamarineSuave);
+    color: var(--VioletaOscuro);
 }
 
 /*CATEGORÍA PRODUCTO*/
@@ -91,10 +112,6 @@
 }
 
 /*PROPIEDAD PRODUCTO*/
-.productAll .estilo-c .info-container span {
-    font-size: 14px;
-}
-
 .productAll .estilo-c .info-container h3 {
     font-size: 24px;
 }
@@ -110,11 +127,12 @@
     border-radius: 25px;
 }
 
-.productAll .card-c-iconos {
-    display: flex;
+.productAll .card-c-iconos,
+.buttons {
+    display: inline-flex;
     flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: space-between;
+
 }
 
 .productAll .iconos-white a {
@@ -123,6 +141,9 @@
     border-radius: 50%;
     font-size: 10px;
     padding: 4px;
+    display: inline-flex;
+    justify-content: center;
+    align-content: flex-end;
 }
 
 .productAll .card-c-iconos .buttons {
@@ -136,74 +157,6 @@
     border-radius: 30%;
 }
 
-/* NUESTRA COMUNIDAD OPINA */
-.productAll .titulares {
-    text-align: center;
-    color: white;
-    background-color: var(--verdeOscuro);
-    margin: 30px 0;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 32px;
-}
-
-.productAll .comunidad {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    flex-wrap: nowrap;
-    padding: 0px 30px 50px;
-}
-
-.productAll .card__perfil {
-    border: 2px solid antiquewhite;
-    width: 100%;
-    padding: 10px;
-    border-radius: 20px;
-    background-color: rgba(127, 255, 212, 0.5);
-    ;
-    color: var(--VioletaOscuro);
-    text-align: center;
-}
-
-.productAll .card__perfil p {
-    padding-top: 10px;
-    color: var(--VioletaOscuro);
-    text-shadow: none;
-    font-size: 12px;
-    font-size: 12px;
-    background-color: rgba(127, 255, 212, 0.9);
-    border-radius: 8px;
-}
-
-.productAll .card__nombre img {
-    width: 20%;
-    border-radius: 50%;
-    padding-top: 15px;
-}
-
-.productAll .card__nombre h2 {
-    padding-top: 5px;
-}
-
-.productAll .iconos-eco {
-    margin: 10px;
-    margin-bottom: 10px;
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    align-items: end;
-    justify-content: space-around;
-    margin-bottom: -48px;
-}
-
-.productAll .iconos-eco img {
-    width: 24%;
-    border-radius: 50%;
-}
 
 .productAll .estilo-c .add-cart:hover {
     color: var(--azulSuave);
@@ -213,17 +166,20 @@
 
 @media(min-width: 460px) {
     .productAll .row {
+        width: 100%;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: space-evenly;
+        align-content: center;
+        align-items: center;
     }
 
-    .productAll .card.estilo-c {
-        width: 49%;
+    .productAll article {
+        width: 40%;
     }
 
     /*NOMBRE PRODUCTO*/
     .productAll .estilo-c .info-container h2 {
-        font-size: 22px;
+        font-size: 18px;
     }
 
     /*CATEGORÍA PRODUCTO*/
@@ -260,19 +216,21 @@
         flex-direction: row;
     }
 
-    .productAll .card.estilo-c {
+    .productAll article {
         width: 30%;
+        /* gap: 6px; */
     }
 
     /*PROPIEDAD PRODUCTO*/
     .productAll .estilo-c .info-container span {
-        font-size: 20px;
+        font-size: 15px;
     }
 
     .productAll .iconos-eco {
         width: 97%;
     }
 }
+
 
 .productAll .banner img {
     width: 100%;
