--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,24 +1,23 @@
-.register main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
 
 .header_register {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: none;
 }
 
 .header_register img {
     width: 150px;
 }
 
+.register_alert{
+    font-size: 10px;
+    background-color: rgb(224, 129, 129);
+    width: 100%;
+    color: white;
+}
+
 .register_container {
     width: 270px;
     padding: 20px;
-    margin: 10px 0 10px;
+    margin: 70px auto;
     box-shadow: 5px 5px 10px rgb(161, 206, 152);
     border-radius: 5px;
     background-color: rgba(255, 255, 255, .15);
@@ -26,16 +25,16 @@
     border: 1px solid var(--verdeFuerte);
 }
 
-.box_1 {
+.container_register-box1 {
     font-size: 12px;
 }
 
-.box_2 {
-    font-size: 10px;
+.container_register-box2 {
+    font-size: 12px;
     text-align: end;
 }
 
-.box_introduccion {
+.register_box-introduccion {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -69,11 +68,6 @@
     margin-left: 10px;
 }
 
-.register_center {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
 
 .register_terminos {
     display: flex;
@@ -83,19 +77,14 @@
 
 }
 
-.register_form-input:hover{
-    box-shadow: 0 0 5px var(--verdeOscuro), 0 0 10px var(--verdeOscuro), 0 0 15px var(--verdeOscuro);
+.register_errors-box{
+    text-align: center;
 }
 
-.register_form-input:focus{
-    box-shadow: 0 0 5px var(--verdeOscuro), 0 0 10px var(--verdeOscuro), 0 0 15px var(--verdeOscuro);
-}
 .register_button {
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    margin-top: 10px;
 }
 
 .register_form-box:first-child {
@@ -105,20 +94,55 @@
 .register_button button {
     background-color: var(--verdeOscuro);
     color: black;
-    border-radius: 12px;
-    padding: 5px 10px;
+    border-radius: 8px;
+    padding: 8px;
+    transition: all 0.8s;
+    font-size: 15px;
+    margin-top: 10px;
 }
 
-.register button:hover {
-    transition: all 0.4s;
-    background-color: var(--verdeFuerte);
+@media (min-width: 425px) {
+    .register_container {
+        width: 450px;
+        
+    }
+
+    .header_register_mobile {
+        display: none;
+    }
+
+    .header_register {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 20%;
+    }
 }
 
 @media (min-width: 768px) {
-    .header_register img {
-        width: 250px;
-        margin-bottom: 10px;
+    .register_container {
+        width: 700px;
+        height: calc(100vh-130px);
     }
+
+    .register_sub-container {
+        display: flex;
+    }
+
+    .register_sub-container1 {
+        padding: 10px;
+        width: 50%;
+    }
+
+    .register_sub-container2 {
+        padding: 10px;
+        width: 50%;
+    }
+
+    .register_button button:hover {
+        background-color: var(--verdeFuerte);
+    }
+
 
     .box_1 {
         font-size: 15px;
@@ -128,17 +152,25 @@
         font-size: 12px;
     }
 
-    .container {
+    .register .container {
         width: 350px;
         height: 500px;
     }
-    .register_form-box{
+
+    .register_form-box {
         margin: 10px 0;
     }
+
     .register_form-box:first-child {
         margin-top: 0;
     }
-    .register_form-box:last-child{
+
+    .register_form-box:last-child {
         margin-bottom: 0;
+    }
+
+    .register_form-input:hover,
+    .register_form-input:focus {
+        box-shadow: 0 0 5px var(--verdeOscuro), 0 0 10px var(--verdeOscuro), 0 0 15px var(--verdeOscuro);
     }
 }
