--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,134 +4,95 @@
 <%- include('./partials/head', { title : "Home" }) %>
 
     <body class="home">
-        <div class="intro">
-            <h1 class="welcome-header">
-                <span class="letter"> B I E N V E N I D O </span><span></span><br><span class="letter"> A
-                </span><br><span> </span><span class="letter"> V I V E </span><span> </span><span class="letter"> B I O
-                </span><span> </span><span class="letter">!</span>
-
-                <img src="/images/logo.png" id="pic" alt="logo" width="300px">
-            </h1>
-        </div>
         <%- include('./partials/header') %>
-            <div class="carrusel__home">
-                <img src="/images/logo.png" alt="logo" class="banner">
+        
+            <!-- Inicio de carrusel -->
+            <div class="slider">
+                <div class="slides">
+                    <input type="radio" name="radio-btn" id="radio1">
+                    <input type="radio" name="radio-btn" id="radio2">
+                    <input type="radio" name="radio-btn" id="radio3">
+                    <input type="radio" name="radio-btn" id="radio4">
+                    <!-- imagenes de carrusel -->
+                    <div class="slide first">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <div class="img_1"></div>
+                    </div>
+                    <div class="slide">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <div class="img_2"></div>
+                    </div>
+                    <div class="slide">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <div class="img_3"></div>
+                    </div>
+                    <div class="slide">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <div class="img_4"></div>
+                    </div>
+                    <!-- fin de imagenes de carrusel -->
+                    <!-- botones manuales -->
+                    <div class="navigation-auto">
+                        <div class="auto-btn1"></div>
+                        <div class="auto-btn2"></div>
+                        <div class="auto-btn3"></div>
+                        <div class="auto-btn4"></div>
+                    </div>
+                    <!-- fin de botones manuales -->
+                </div>
+                <!-- botones para automatico -->
+                <div class="navigation-manual">
+                    <label for="radio1" class="manual-btn"></label>
+                    <label for="radio2" class="manual-btn"></label>
+                    <label for="radio3" class="manual-btn"></label>
+                    <label for="radio4" class="manual-btn"></label>
+                </div>
+                <!-- fin de botones automaticos -->
             </div>
+            <!-- fin de carrusel -->
             <main>
                 <div class="subtitulo__home">
                     <h1>Productos en Oferta</h1>
                 </div>
                 <section class="sect1">
-                    <article class="art__home">
-                        <div class="nombreart__home">
-                            <h1>producto 1</h1>
-                        </div>
-                        <div class="imgart__home">
-                            <img src="/images/producto1.jpeg" alt="">
-                        </div>
-                        <div class="precio">
-                            <h4>$600</h4>
-                            <p>$300</p>
-                        </div>
-                        <div class="verart__home">
-                            <a href="/productCard">Ver mas</a>
-                        </div>
-                    </article>
-                    <article class="art__home">
-                        <div class="nombreart__home">
-                            <h1>producto 1</h1>
-                        </div>
-                        <div class="imgart__home">
-                            <img src="/images/producto3.jpeg" alt="">
-                        </div>
-                        <div class="precio">
-                            <h4>$600</h4>
-                            <p>$300</p>
-                        </div>
-                        <div class="verart__home">
-                            <a href="/productCard">Ver mas</a>
-                        </div>
-                    </article>
-                    <article class="art__home">
-                        <div class="nombreart__home">
-                            <h1>producto 2</h1>
-                        </div>
-                        <div class="imgart__home">
-                            <img src="/images/producto2.jpeg" alt="">
-                        </div>
-                        <div class="precio">
-                            <h4>$600</h4>
-                            <p>$300</p>
-                        </div>
-                        <div class="verart__home">
-                            <a href="/productCard">Ver mas</a>
-                        </div>
-                    </article>
-                    <article class="art__home">
-                        <div class="nombreart__home">
-                            <h1>producto 3</h1>
-                        </div>
-                        <div class="imgart__home">
-                            <img src="/images/producto3.jpeg" alt="">
-                        </div>
-                        <div class="precio">
-                            <h4>$600</h4>
-                            <p>$300</p>
-                        </div>
-                        <div class="verart__home">
-                            <a href="/productCard">Ver mas</a>
-                        </div>
-                    </article>
-                    <article class="art__home" id="art__home4">
-                        <div class="nombreart__home">
-                            <h1>producto 1</h1>
-                        </div>
-                        <div class="imgart__home">
-                            <img src="/images/producto1.jpeg" alt="">
-                        </div>
-                        <div class="precio">
-                            <h4>$600</h4>
-                            <p>$300</p>
-                        </div>
-                        <div class="verart__home">
-                            <a href="/productCard">Ver mas</a>
-                        </div>
-                    </article>
-                    <article class="vermas__home">
-                        <div class='vermas-general'>
-                            <a href="/productAll">Ver mas</a>
-                        </div>
-                    </article>
-                </section>
+                    <% products.forEach(product => { %>
+                        <% if (product.dest) { %>
+                            <article class="art__home">
+                                <div class="nombreart__home">
+                                    <h1><%= product.name %> </h1>
+                                </div>
+                                <div class="imgart__home">
+                                    <img src="/images/<%= product.image %>" alt="">
+                                </div>
+                                <div class="precio">
+                                    <h4><%= product.price %> $ </h4>
+                                    <p><%= product.price - (product.price * product.discount / 100) %> $ </p>
+                                </div>
+                                <div class="verart__home">
+                                    <a href="/Products/Card/<%= product.id %>">Ver mas</a>
+                                </div>
+                            </article>
+                        <% } %>
+                    <% }) %>
                 <div class='nombre-categorias__home'>
                     <h1>Categorias</h1>
                 </div>
                 <section class="sect2">
-
-                    <article class="categorias__home">
-                        <div class="corporal__home" id="cate">
-                            <div class="barra__cate__home">
-                                <a href="">BioCorporal</a>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="categorias__home">
-                        <div class="capilar__home" id="cate">
-                            <div class="barra__cate__home">
-                                <a href="">BioCapilar</a>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="categorias__home">
-                        <div class="spa__home" id="cate">
-                            <div class="barra__cate__home">
-                                <a href="">BioSpa</a>
-                            </div>
-                        </div>
-                    </article>
+                    <% category.forEach(cate => { %>
+                        <article class="categorias__home">
+                            <a href="/Products/All#<%= cate.name %>">
+                                <div class="<%= cate.name %>__home" id="cate"></div>
+                                <div class="barra__cate__home">
+                                    <p><%= cate.name %></p>
+                                </div>
+                            </a>
+                        </article>
+                    <% }) %>
                 </section>
             </main>
             <%- include('./partials/footer') %>
-                <script src="/javascript/intro.js"></script>
+                <script type="text/javascript" src="/javascript/carrusel.js"></script>
+                <script src="/javascript/menuMobile.js"></script>
     </body>
+
 </html>
