--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -1,65 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<%- include('../partials/head', {
-    title : "Register"
-}) %> 
+<%- include('../partials/head', { title : "Register" }) %>
 
 
-<body class="register">
-    <header class="header_register">
-        <a href="/"><img src="/images/logo.png" alt=""></a>
-    </header>
-    <main>
-        <section class="register_container">
-            <div class="box_introduccion">
-                <div class="box_1">
-                    <p style="text-shadow: 1px 1px 2px black;">Binvenido a </p>
-                    <p style="color: var(--verdeFuerte);text-shadow: 1px 1px 2px black;">ViveBio</p>
-                </div>
-                <div class="box_2">
-                    <p style="text-shadow: 1px 1px 2px black;">Ya tenés cuenta?</p>
-                    <a href="/users/login" style="color: var(--verdeFuerte);text-shadow: 1px 1px 1px black;">Logueate!</a>
-                </div>
-            </div>
-            <h1>Registro</h1>
-            <form action="">
-                <article>
-                    <div class="register_form-box">
-                        <label for="email">E-mail</label>
-                        <input class="register_form-input" type="email" id="email" name="email"
-                            placeholder="Ingresa tu email">
+    <body class="register">
+        <div class="header_register">
+            <a href="/"><img src="/images/logo.png" alt=""></a>
+        </div>
+        <div class="header_register_mobile">
+            <%- include('../partials/header') %>
+        </div>
+        <main>
+            <section class="register_container">
+                <div class="register_box-introduccion">
+                    <div class="container_register-box1">
+                        <p style="text-shadow: 1px 1px 2px black;">Binvenido a </p>
+                        <p style="color: var(--verdeFuerte);text-shadow: 1px 1px 2px black;">ViveBio</p>
                     </div>
-                    <div class="register_form-box">
-                        <label for="user">Usuario</label>
-                        <input class="register_form-input" type="user" id="user" name="user"
-                            placeholder="Ingresa usuario">
+                    <div class="container_register-box2">
+                        <p style="text-shadow: 1px 1px 2px black;">Ya tenés cuenta?</p>
+                        <a href="/users/login"
+                            style="color: var(--verdeFuerte);text-shadow: 1px 1px 1px black;">Logueate!</a>
                     </div>
-                    <div class="register_form-box">
-                        <label for="password">Contraseña</label>
-                        <input class="register_form-input" type="password" id="password" name="password"
-                            placeholder="Ingresa tu contraseña">
+                </div>
+                <h1>Registro</h1>
+                <form action="" method="POST" enctype="multipart/form-data">
+                    <article class="register_sub-container">
+                        <div class="register_sub-container1">
+                            <div class="register_form-box">
+                                <label for="firstName">Nombre</label>
+                                <input class="register_form-input" type="text" id="firstName" name="firstName"
+                                    placeholder="Ingresa tu nombre"
+                                    value="<%= locals.old && old.firstName ? old.firstName : null %>">
+                                <span class="register_alert"">
+                                    <%= locals.errores && errores.firstName ? errores.firstName.msg : null %>
+                                </span>
+                            </div>
+
+                            <div class=" register_form-box">
+                                    <label for="lastName">Apellido</label>
+                                    <input class="register_form-input" type="text" id="lastName" name="lastName"
+                                        placeholder="Ingresa tu apellido"
+                                        value="<%= locals.old && old.lastName ? old.lastName : null %>">
+                                    <span class="register_alert"">
+                                        <%= locals.errores && errores.lastName ? errores.lastName.msg : null %>
+                                    </span>
+                            </div>
+                            <div class=" register_form-box">
+                                        <label for="email">E-mail</label>
+                                        <input class="register_form-input" type="email" id="email" name="email"
+                                            placeholder="Ingresa tu email"
+                                            value="<%= locals.old && old.email ? old.email : null %>">
+                                        <span class="register_alert"">
+                                        <%= locals.errores && errores.email ? errores.email.msg : null %>
+                                    </span>
+                            </div>
+                            <div class=" register_form-box">
+                                            <label for="user">Usuario</label>
+                                            <input class="register_form-input" type="user" id="user" name="user"
+                                                placeholder="Ingresa usuario"
+                                                value="<%= locals.old && old.user ? old.user : null %>">
+                                            <span class="register_alert"">
+                                        <%= locals.errores && errores.user ? errores.user.msg : null %>
+                                    </span>
+                            </div>
+                        </div>
+                        <div class=" register_sub-container2">
+                                                <div class="register_form-box">
+                                                    <label for="password">Contraseña</label>
+                                                    <input class="register_form-input" type="password" id="password"
+                                                        name="password" placeholder="Ingresa tu contraseña">
+                                                    <span class="register_alert"">
+                                        <%= locals.errores && errores.password ? errores.password.msg : null %>
+                                    </span>
+                            </div>
+                            <div class=" register_form-box">
+                                                        <label for="password2">Repite tu contraseña</label>
+                                                        <input class="register_form-input" type="password"
+                                                            id="password2" name="password2"
+                                                            placeholder="Vuelve a ingresa tu contraseña">
+                                                        <span class="register_alert"">
+                                        <%= locals.errores && errores.password2 ? errores.password2.msg : null %>
+                                    </span>
+                            </div>
+                            
+                            <div class=" register_form-box">
+                                                            <label for="image">Imagen de perfil</label>
+                                                            <input class="register_form-input" type="file" name="image"
+                                                                id="image">
+                                                </div>
+                            </div>
+                    </article>
+                    <div class="register_terminos">
+                        <input class="" type="checkbox" name="terminos" id="terminos">
+                        <label for="terminos" style="font-size: 12px;">Acepto términos y condiciones</label>
+
                     </div>
-                    <div class="register_form-box">
-                        <label for="password2">Repite tu contraseña</label>
-                        <input class="register_form-input" type="password" id="password2" name="password2"
-                            placeholder="Ingresa tu contraseña">
+                    <div class="register_errors-box">
+                        <span class="register_alert"">
+                        <%= locals.errores && errores.terminos ? errores.terminos.msg : null %>
+                    </span>
                     </div>
-                </article>
-                </div>
-                </div>
-                <div class="register_center">
-                <div class="register_terminos">
-                    <input class="" type="checkbox" name="terminos" id="terminos">
-                    <label for="terminos">Términos y condiciones</label>
-                </div>
-                <div class="register_button">
-                    <button type="submit">Enviar</button>
-                </div>
-            </div>
-            </form>
-        </section>
-    </main>
-</body>
+                    <div class=" register_button">
+                            <button type="submit">Enviar</button>
+                    </div>
+                </form>
+            </section>
+        </main>
+    </body>
+    <script src="/javascript/menuMobile.js"></script>
 
 </html>
