--- a/site_ViveBio/src/views/users/register.ejs
+++ b/site_ViveBio/src/views/users/register.ejs
@@ -30,9 +30,14 @@
                         <div class="register_sub-container1">
                             <div class="register_form-box">
                                 <label for="firstName">Nombre</label>
-                                <input class="register_form-input" type="text" id="firstName" name="firstName"
-                                    placeholder="Ingresa tu nombre"
+                                <input
+                                    class="register_form-input <%= locals.errores && errores.firstName ? 'register_error_input' : null %>"
+                                    type="text" id="firstName" name="firstName" placeholder="Ingresa tu nombre"
                                     value="<%= locals.old && old.firstName ? old.firstName : null %>">
+                                <div
+                                    class="register_error_box-stamp <%= locals.errores && errores.firstName ? 'register_error_icon' : null %>">
+                                    <span class="register_error_stamp"></span>
+                                </div>
                                 <span class="register_alert"">
                                     <%= locals.errores && errores.firstName ? errores.firstName.msg : null %>
                                 </span>
@@ -40,27 +45,42 @@
 
                             <div class=" register_form-box">
                                     <label for="lastName">Apellido</label>
-                                    <input class="register_form-input" type="text" id="lastName" name="lastName"
-                                        placeholder="Ingresa tu apellido"
+                                    <input
+                                        class="register_form-input <%= locals.errores && errores.lastName ? 'register_error_input' : null %>"
+                                        type="text" id="lastName" name="lastName" placeholder="Ingresa tu apellido"
                                         value="<%= locals.old && old.lastName ? old.lastName : null %>">
+                                    <div
+                                        class="register_error_box-stamp <%= locals.errores && errores.lastName ? 'register_error_icon' : null %>">
+                                        <span class="register_error_stamp"></span>
+                                    </div>
                                     <span class="register_alert"">
                                         <%= locals.errores && errores.lastName ? errores.lastName.msg : null %>
                                     </span>
                             </div>
                             <div class=" register_form-box">
                                         <label for="email">E-mail</label>
-                                        <input class="register_form-input" type="email" id="email" name="email"
-                                            placeholder="Ingresa tu email"
+                                        <input
+                                            class="register_form-input <%= locals.errores && errores.email ? 'register_error_input' : null %>"
+                                            type="email" id="email" name="email" placeholder="Ingresa tu email"
                                             value="<%= locals.old && old.email ? old.email : null %>">
+                                        <div
+                                            class="register_error_box-stamp <%= locals.errores && errores.email ? 'register_error_icon' : null %>">
+                                            <span class="register_error_stamp"></span>
+                                        </div>
                                         <span class="register_alert"">
                                         <%= locals.errores && errores.email ? errores.email.msg : null %>
                                     </span>
                             </div>
                             <div class=" register_form-box">
                                             <label for="user">Usuario</label>
-                                            <input class="register_form-input" type="user" id="user" name="user"
-                                                placeholder="Ingresa usuario"
+                                            <input
+                                                class="register_form-input <%= locals.errores && errores.user ? 'register_error_input' : null %>"
+                                                type="user" id="user" name="user" placeholder="Ingresa usuario"
                                                 value="<%= locals.old && old.user ? old.user : null %>">
+                                            <div
+                                                class="register_error_box-stamp <%= locals.errores && errores.user ? 'register_error_icon' : null %>">
+                                                <span class="register_error_stamp"></span>
+                                            </div>
                                             <span class="register_alert"">
                                         <%= locals.errores && errores.user ? errores.user.msg : null %>
                                     </span>
@@ -69,17 +89,30 @@
                         <div class=" register_sub-container2">
                                                 <div class="register_form-box">
                                                     <label for="password">Contraseña</label>
-                                                    <input class="register_form-input" type="password" id="password"
-                                                        name="password" placeholder="Ingresa tu contraseña">
+                                                    <div class="register_box-input">
+                                                        <input
+                                                            class="register_form-input <%= locals.errores && errores.password ? 'register_error_input' : null %>"
+                                                            type="password" id="password" name="password"
+                                                            placeholder="Ingresa tu contraseña">
+                                                        <div
+                                                            class="register_error_box-stamp <%= locals.errores && errores.password ? 'register_error_icon' : null %>">
+                                                            <span class="register_error_stamp"></span>
+                                                        </div>
+                                                    </div>
                                                     <span class="register_alert"">
                                         <%= locals.errores && errores.password ? errores.password.msg : null %>
                                     </span>
                             </div>
                             <div class=" register_form-box">
                                                         <label for="password2">Repite tu contraseña</label>
-                                                        <input class="register_form-input" type="password"
-                                                            id="password2" name="password2"
+                                                        <input
+                                                            class="register_form-input <%= locals.errores && errores.password2 ? 'register_error_input' : null %>"
+                                                            type="password" id="password2" name="password2"
                                                             placeholder="Vuelve a ingresa tu contraseña">
+                                                        <div
+                                                            class="register_error_box-stamp <%= locals.errores && errores.password2 ? 'register_error_icon' : null %>">
+                                                            <span class="register_error_stamp"></span>
+                                                        </div>
                                                         <span class="register_alert"">
                                         <%= locals.errores && errores.password2 ? errores.password2.msg : null %>
                                     </span>
@@ -93,9 +126,10 @@
                             </div>
                     </article>
                     <div class="register_terminos">
-                        <input class="" type="checkbox" name="terminos" id="terminos">
+                        <input
+                            class="<%= locals.errores && errores.terminos ? 'register_error_input_terminos' : null %>"
+                            type="checkbox" name="terminos" id="terminos">
                         <label for="terminos" style="font-size: 12px;">Acepto términos y condiciones</label>
-
                     </div>
                     <div class="register_errors-box">
                         <span class="register_alert"">
